--- a/angular-ocr/src/styles.scss
+++ b/angular-ocr/src/styles.scss
@@ -192,22 +192,52 @@ body {
 
 html {
 
-  // ::-webkit-scrollbar-track
-  // {
-  //   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-  //   background-color: #F5F5F5;
-  // }
-  //
-  // ::-webkit-scrollbar
-  // {
-  //   width: 6px;
-  //   background-color: #F5F5F5;
-  // }
-  //
-  //::-webkit-scrollbar-thumb
-  // {
-  //   background-color: #000000;
-  // }
+  /* Customize website's scrollbar like Mac OS
+  Not supports in Firefox and IE */
 
+  /* total width */
+  body ::-webkit-scrollbar {
+    background-color: #fff;
+    width: 16px;
+  }
+
+  /* background of the scrollbar except button or resizer */
+  body ::-webkit-scrollbar-track {
+    background-color: #fff;
+  }
+
+  /* scrollbar itself */
+  body ::-webkit-scrollbar-thumb {
+    background-color: #babac0;
+    border-radius: 16px;
+    border: 4px solid #fff;
+  }
+
+  /* set button(top and bottom of the scrollbar) */
+  body ::-webkit-scrollbar-button {
+    display: none;
+  }
+
+  /* total width */
+  body::-webkit-scrollbar {
+    background-color: #fff;
+    width: 16px;
+  }
+
+  /* background of the scrollbar except button or resizer */
+  body::-webkit-scrollbar-track {
+    background-color: #fff;
+  }
+  /* scrollbar itself */
+  body::-webkit-scrollbar-thumb {
+    background-color: #babac0;
+    border-radius: 16px;
+    border: 4px solid #fff;
+  }
+
+  /* set button(top and bottom of the scrollbar) */
+  body::-webkit-scrollbar-button {
+    display: none;
+  }
 }
 
