--- a/angular-ocr/src/app/modules/pages/folder-user/add-new-folder-user-dialog/add-new-folder-user-dialog.component.html
+++ b/angular-ocr/src/app/modules/pages/folder-user/add-new-folder-user-dialog/add-new-folder-user-dialog.component.html
@@ -12,20 +12,12 @@
     <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left w-full">
       <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-title">
         {{'OCR.THEMTHUMUCMOI' | translate}}
-        <ng-container *ngIf="!(service.isRootFolder$ | async) as root; else rootFolder">
-          <ng-container *ngIf="(service.activeFolder$ | async) as folder">
+          <ng-container *ngIf="(serivceStore.activeOcrNode$ | async) as folder">
             vào thư mục :
             <span class="text-lg leading-6 font-medium text-orange-apple-aqua-500">
             {{folder.name}}
           </span>
           </ng-container>
-        </ng-container>
-        <ng-template #rootFolder>
-          vào thư mục :
-          <span class="text-lg leading-6 font-medium text-orange-apple-aqua-500">
-            {{'OCR.THUMUCGOC' | translate}}
-          </span>
-        </ng-template>
       </h3>
 
       <div class="mt-2 w-full">
