--- a/angular-ocr/src/app/modules/pages/folder-user/folder-user-list/file-orc-extract-progressing/file-orc-extract-progressing.component.html
+++ b/angular-ocr/src/app/modules/pages/folder-user/folder-user-list/file-orc-extract-progressing/file-orc-extract-progressing.component.html
@@ -154,7 +154,7 @@
   </div>
   <div class="overflow-y-auto w-full h-full-56 bg-gray-100 opacity-75 relative border-l-2 border-solid border-gray-300">
     <div *ngIf="(file.state == 1 || file.state == 2)" class="px-4 py-3 sm:px-8 p-4 h-[60px]">
-      <ocr-progressing [fileId]="file.id"></ocr-progressing>
+<!--      <ocr-progressing [fileId]="file.id"></ocr-progressing>-->
     </div>
     <div *ngIf="file.page_count > 1" class="border-b border-solid border-gray-300">
       <ocr-file-page (currentPage)="getCurrentPage($event)" [file]="file"></ocr-file-page>
@@ -183,16 +183,9 @@
                 d="M12 19c.946 0 1.81-.103 2.598-.281l-1.757-1.757c-.273.021-.55.038-.841.038-5.351 0-7.424-3.846-7.926-5a8.642 8.642 0 0 1 1.508-2.297L4.184 8.305c-1.538 1.667-2.121 3.346-2.132 3.379a.994.994 0 0 0 0 .633C2.073 12.383 4.367 19 12 19zm0-14c-1.837 0-3.346.396-4.604.981L3.707 2.293 2.293 3.707l18 18 1.414-1.414-3.319-3.319c2.614-1.951 3.547-4.615 3.561-4.657a.994.994 0 0 0 0-.633C21.927 11.617 19.633 5 12 5zm4.972 10.558-2.28-2.28c.19-.39.308-.819.308-1.278 0-1.641-1.359-3-3-3-.459 0-.888.118-1.277.309L8.915 7.501A9.26 9.26 0 0 1 12 7c5.351 0 7.424 3.846 7.926 5-.302.692-1.166 2.342-2.954 3.558z"></path>
             </svg>
           </div>
-          <div *ngIf="!(isImageLoading.asObservable() | async); else notFoundImage">
+          <div *ngIf="!(isImageLoading.asObservable() | async)">
             <img [alt]="file.name" [src]="imageToShow" class="h-auto w-full rounded-lg"/>
           </div>
-          <ng-template #notFoundImage>
-            <mat-progress-spinner
-              color="primary"
-              mode="indeterminate">
-            </mat-progress-spinner>
-            <img [alt]="file.name" class="rounded-lg">
-          </ng-template>
         </div>
         <!--        <div #dragHover (cdkDragMoved)="dragMove(dragHover, $event)" cdkDrag cdkDragLockAxis="x"-->
         <!--             class="border-solid border-2 border-gray-700 rounded-lg w-[12px]-->
@@ -224,7 +217,7 @@
             </svg>
           </div>
           <div class="p-1 w-full h-full relative">
-            <ocr-table-metadata [ocrFileModel]="ocr" class="w-full h-full "></ocr-table-metadata>
+<!--            <ocr-table-metadata [ocrFileModel]="ocr" class="w-full h-full "></ocr-table-metadata>-->
           </div>
         </div>
       </div>
