phong update new

--- a/angular-ocr/src/app/modules/pages/folder-user/tree-ocr-list/tree-ocr-list.component.html
+++ b/angular-ocr/src/app/modules/pages/folder-user/tree-ocr-list/tree-ocr-list.component.html
@@ -123,55 +123,51 @@
         </button>
       </div>
     </div>
-    <div [ngClass]="(serviceStore.showComponentFile$ | async) ? 'grid grid-cols-4 body-list-table' : ''">
+    <div [ngClass]="showComponentFile ? 'grid grid-cols-4 body-list-table' : ''">
       <div class="w-full overflow-hidden shadow-lg bg-white h-full relative">
         <ng-container *ngIf="serviceStore.isLoading$ | async">
         <mat-progress-bar class="z-10 top-0" mode="indeterminate" style="position: absolute" ></mat-progress-bar>
         </ng-container>
-        <ng-container>
-          <div [ngClass]="showComponentFile  ? 'grid grid-cols-4 body-list-table' : ''">
-            <div class="w-full overflow-hidden shadow-lg bg-white h-full">
-              <div class="w-full overflow-x-auto h-full">
-                <table class="w-full table-auto">
-                  <thead>
-                    <tr class="h-[50px] items-center bg-gray-50 px-2 py-2 text-sm tracking-wider border-solid border-b border-gray-apple-aqua-300">
-                      <th class="user-folder-header">
-                        <span class="pl-5">Tên</span>
-                      </th>
-                      <th class="user-folder-header min-w-[100px]">
-                        Trạng thái
-                      </th>
-                      <th class="user-folder-header min-w-[100px]" style="text-align: right">
-                        Kích cỡ tệp
-                      </th>
-                      <th class="user-folder-header min-w-[100px]">
-                        Chủ sở hữu
-                      </th>
-                      <th class="user-folder-header min-w-[100px]">
-                        Ngày tạo
-                      </th>
-                      <ng-container *ngFor="let header of serviceStore.props$ | async">
-                        <th class="user-folder-header min-w-[150px]">{{getHeaderTitle(header.note)}}</th>
-                      </ng-container>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <ng-container *ngFor="let ocr of serviceStore.treeOcr$ | async; let i = index">
-                      <ng-container *ngIf="ocr.type === 'folder'; else file">
-                        <tr [ngClass]="(serviceStore.activeOcrNode$ | async).id === ocr.id ? getBackgroundActive() : ''" [ocrNode]="ocr" app-ocr-node-row-folder ></tr>
-                      </ng-container>
-                      <ng-template #file>
-                        <tr (click)="clickFile(ocr)" [ngClass]="(serviceStore.activeOcrNode$ | async).id === ocr.id ? getBackgroundActive(): ''"  [ocrNode]="ocr" app-ocr-node-row-file></tr>
-                      </ng-template>
+          <div class="w-full overflow-hidden shadow-lg bg-white h-full">
+            <div class="w-full overflow-x-auto h-full">
+              <table class="w-full table-auto">
+                <thead>
+                  <tr class="h-[50px] items-center bg-gray-50 px-2 py-2 text-sm tracking-wider border-solid border-b border-gray-apple-aqua-300">
+                    <th class="user-folder-header">
+                      <span class="pl-5">Tên</span>
+                    </th>
+                    <th class="user-folder-header min-w-[100px]">
+                      Trạng thái
+                    </th>
+                    <th class="user-folder-header min-w-[100px]" style="text-align: right">
+                      Kích cỡ tệp
+                    </th>
+                    <th class="user-folder-header min-w-[100px]">
+                      Chủ sở hữu
+                    </th>
+                    <th class="user-folder-header min-w-[100px]">
+                      Ngày tạo
+                    </th>
+                    <ng-container *ngFor="let header of serviceStore.props$ | async">
+                      <th class="user-folder-header min-w-[150px]">{{getHeaderTitle(header.note)}}</th>
                     </ng-container>
-                  </tbody>
-                </table>
-              </div>
+                  </tr>
+                </thead>
+                <tbody>
+                  <ng-container *ngFor="let ocr of serviceStore.treeOcr$ | async; let i = index">
+                    <ng-container *ngIf="ocr.type === 'folder'; else file">
+                      <tr [ngClass]="(serviceStore.activeOcrNode$ | async).id === ocr.id ? getBackgroundActive() : ''" [ocrNode]="ocr" app-ocr-node-row-folder ></tr>
+                    </ng-container>
+                    <ng-template #file>
+                      <tr (click)="clickFile(ocr)" [ngClass]="(serviceStore.activeOcrNode$ | async).id === ocr.id ? getBackgroundActive(): ''"  [ocrNode]="ocr" app-ocr-node-row-file></tr>
+                    </ng-template>
+                  </ng-container>
+                </tbody>
+              </table>
             </div>
           </div>
-        </ng-container>
       </div>
-      <ng-container *ngIf="serviceStore.showComponentFile$ | async">
+      <ng-container *ngIf="showComponentFile">
         <div [ngClass]="isFullSreenComponent? 'fixed  top-0 left-0 z-50  w-screen h-screen' : ''"
              class="w-full mb-8 overflow-hidden shadow-lg bg-white h-full col-span-3">
           <div (isFullSreen)="getisFullSreenComponent($event)" [fileId]="fileIdShowInfo" app-ocr-file-info  class="w-full h-full">
